metadata/force-app/main/default/objects/CustomName_wDAnE__c/CustomName_wDAnE__c.object-meta.xml
<CustomObject>
    <description>Description_ZVWih</description>
    <label>CustomLabel_msheq</label>
    <nameField>
        <label>CustomLabel_msheq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_msheqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>