metadata/force-app/main/default/objects/CustomName_wDAnE__c/fields/CustomField_YLLDT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YLLDT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVhEbZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>